# stock-notifier

./: .gitignore  pyproject.toml
stock_notifier/: __main__.py  models.py
